# pymirror

./: LICENSE  README.md  setup.cfg  setup.py
pymirror/: pymirror.py  text_comparator.py
pymirror/utils/: highlight.py
src/pymirror/: main.py
src/pymirror/text_comparator/: comparator.py
tests/: test_text_compare.py
