[metadata]
name = pymirror-rmugicag
version = 0.0.6
author = Ricardo Mugica
author_email = rmugicag@gmail.com
description = Text comparator UI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rmugicag/pymirror
project_urls =
    Bug Tracker = https://github.com/rmugicag/pymirror/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11

install_requires =
    PyQt5

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pymirror = pymirror.main:main